--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-4-security/step-4-security-1-plans-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-4-security/step-4-security-1-plans-list.component.scss
@@ -1,20 +1,28 @@
+@use 'sass:map';
 @use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 @use '../../../../../../scss/gio-layout' as gio-layout;
 
-:host {
-  @include gio-layout.gio-responsive-content-container;
-}
+$typography: map.get(gio.$mat-theme, typography);
 
 .step-4-security-1-plans-list {
-  // 🚧
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    vertical-align: center;
+    padding-bottom: 8px;
+
+    &__title {
+      @include mat.typography-level($typography, subheading-2);
+    }
+  }
   &__table {
     width: 100%;
     @include mat.elevation(1);
 
     &__actions {
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
     }
   }
 }
