feat: add option to use pkce authent in swagger doc page
(cherry picked from commit 87a98830155874c81cfac1491866ef1cbe7b0cc3)

--- a/gravitee-apim-console-webui/src/components/documentation/edit-tabs/edit-page-configuration.html
+++ b/gravitee-apim-console-webui/src/components/documentation/edit-tabs/edit-page-configuration.html
@@ -83,6 +83,9 @@
     <md-checkbox ng-model="$ctrl.page.configuration.displayOperationId" ng-true-value="'true'" ng-false-value="'false'">
       Display the operationId in the operations list
     </md-checkbox>
+    <md-checkbox ng-model="$ctrl.page.configuration.usePkce" ng-true-value="'true'" ng-false-value="'false'">
+      Use PKCE when authenticating with OAuth with authorization code flow
+    </md-checkbox>
     <md-input-container class="md-block">
       <label>Default expansion setting for the operations and tags</label>
       <md-select ng-model="$ctrl.page.configuration.docExpansion">
