feat(console): make api-plan-form compatible with v4 API & Plan

--- a/gravitee-apim-console-webui/src/management/api/component/plan/3-restriction-step/plan-edit-restriction-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/component/plan/3-restriction-step/plan-edit-restriction-step.component.html
@@ -27,16 +27,17 @@
         name="rateLimit"
       ></mat-slide-toggle>
     </gio-form-slide-toggle>
-
-    <gv-schema-form-group
-      *ngIf="rateLimitSchema"
-      class="rateLimit-card__schema-form"
-      ngDefaultControl
-      formControlName="rateLimitConfig"
-      [schema]="rateLimitSchema"
-      [attr.readonly]="restrictionForm.get('rateLimitConfig').enabled ? null : true"
-      (:gv-schema-form-group:error)="onGvSchemaFormError('rateLimitConfig', $event.detail)"
-    ></gv-schema-form-group>
+    <ng-container *ngIf="rateLimitSchema$ | async as rateLimitSchema">
+      <gv-schema-form-group
+        *ngIf="rateLimitSchema"
+        class="rateLimit-card__schema-form"
+        ngDefaultControl
+        formControlName="rateLimitConfig"
+        [schema]="rateLimitSchema"
+        [attr.readonly]="restrictionForm.get('rateLimitConfig').enabled ? null : true"
+        (:gv-schema-form-group:error)="onGvSchemaFormError('rateLimitConfig', $event.detail)"
+      ></gv-schema-form-group>
+    </ng-container>
   </mat-card>
 
   <mat-card class="quota-card">
@@ -51,15 +52,17 @@
       ></mat-slide-toggle>
     </gio-form-slide-toggle>
 
-    <gv-schema-form-group
-      *ngIf="quotaSchema"
-      class="quota-card__schema-form"
-      ngDefaultControl
-      formControlName="quotaConfig"
-      [schema]="quotaSchema"
-      [attr.readonly]="restrictionForm.get('quotaConfig').enabled ? null : true"
-      (:gv-schema-form-group:error)="onGvSchemaFormError('quotaConfig', $event.detail)"
-    ></gv-schema-form-group>
+    <ng-container *ngIf="quotaSchema$ | async as quotaSchema">
+      <gv-schema-form-group
+        *ngIf="quotaSchema"
+        class="quota-card__schema-form"
+        ngDefaultControl
+        formControlName="quotaConfig"
+        [schema]="quotaSchema"
+        [attr.readonly]="restrictionForm.get('quotaConfig').enabled ? null : true"
+        (:gv-schema-form-group:error)="onGvSchemaFormError('quotaConfig', $event.detail)"
+      ></gv-schema-form-group>
+    </ng-container>
   </mat-card>
 
   <mat-card class="resourceFiltering-card">
@@ -74,14 +77,16 @@
       ></mat-slide-toggle>
     </gio-form-slide-toggle>
 
-    <gv-schema-form-group
-      *ngIf="resourceFilteringSchema"
-      class="resourceFiltering-card__schema-form"
-      ngDefaultControl
-      formControlName="resourceFilteringConfig"
-      [schema]="resourceFilteringSchema"
-      [attr.readonly]="restrictionForm.get('resourceFilteringConfig').enabled ? null : true"
-      (:gv-schema-form-group:error)="onGvSchemaFormError('resourceFilteringConfig', $event.detail)"
-    ></gv-schema-form-group>
+    <ng-container *ngIf="resourceFilteringSchema$ | async as resourceFilteringSchema">
+      <gv-schema-form-group
+        *ngIf="resourceFilteringSchema"
+        class="resourceFiltering-card__schema-form"
+        ngDefaultControl
+        formControlName="resourceFilteringConfig"
+        [schema]="resourceFilteringSchema"
+        [attr.readonly]="restrictionForm.get('resourceFilteringConfig').enabled ? null : true"
+        (:gv-schema-form-group:error)="onGvSchemaFormError('resourceFilteringConfig', $event.detail)"
+      ></gv-schema-form-group>
+    </ng-container>
   </mat-card>
 </ng-container>
