feat(console): api creation workflow - add any plan

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-4-security/step-4-security-1-plans-add.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-4-security/step-4-security-1-plans-add.component.html
@@ -16,7 +16,7 @@
 
 -->
 
-<form [formGroup]="form" (ngSubmit)="save()">
+<form [formGroup]="form" (ngSubmit)="onAddPlan()">
   <api-plan-form #apiPlanForm formControlName="plan" mode="create"></api-plan-form>
 
   <div class="api-creation-v4__step__footer">
@@ -49,7 +49,5 @@
     >
       Add plan
     </button>
-
-    <!--      <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Add plan</button>-->
   </div>
 </form>
