--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-4-security/step-4-security-1-plans.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-4-security/step-4-security-1-plans.component.html
@@ -23,10 +23,22 @@
   </div>
 
   <ng-container *ngIf="view === 'list'">
-    <step-4-security-1-plans-list [plans]="plans" (addPlanClicked)="onAddPlanClicked()"></step-4-security-1-plans-list>
+    <step-4-security-1-plans-list
+      [plans]="plans"
+      (addPlanClicked)="onAddPlanClicked()"
+      (editPlanClicked)="onEditPlanClicked($event)"
+    ></step-4-security-1-plans-list>
   </ng-container>
 
   <ng-container *ngIf="view === 'add'">
     <step-4-security-1-plans-add (planChanges)="addPlan($event)" (exitPlanCreation)="onExitPlanCreation()"></step-4-security-1-plans-add>
+  </ng-container>
+
+  <ng-container *ngIf="view === 'edit'">
+    <step-4-security-1-plans-add
+      [plan]="planToEdit"
+      (planChanges)="editPlan($event)"
+      (exitPlanCreation)="onExitPlanCreation()"
+    ></step-4-security-1-plans-add>
   </ng-container>
 </mat-card>
