--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
@@ -105,10 +105,15 @@
       <div class="mat-h3">Security</div>
       <div class="step-6-summary__step__body">
         <div class="step-6-summary__step__info">
-          <div *ngIf="currentStepPayload.plans?.length > 0; else elseBlock">
-            <div class="step-6-summary__step__info__container" *ngFor="let plan of currentStepPayload.plans">
-              <span class="mat-body-strong">{{ plan.name }}</span
-              ><span class="gio-badge-neutral">{{ plan.security.type }}</span>
+          <div class="step-6-summary__step__info__security__content" *ngIf="currentStepPayload.plans?.length > 0; else elseBlock">
+            <div class="step-6-summary__step__info__security__content__card" *ngFor="let plan of currentStepPayload.plans">
+              <div class="step-6-summary__step__info__security__content__card__title">
+                <span class="mat-body-strong">{{ plan.name }}</span
+                ><span class="gio-badge-neutral">{{ plan.security.type }}</span>
+              </div>
+              <div class="step-6-summary__step__info__security__content__card__content">
+                <span>Entrypoints type: http</span>
+              </div>
             </div>
           </div>
           <ng-template #elseBlock> No plans are selected. </ng-template>
