fix(console): endpoint shared configuration badly used

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3-endpoints/step-3-endpoints-2-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3-endpoints/step-3-endpoints-2-config.component.html
@@ -32,11 +32,11 @@
           [jsonSchema]="endpointSchemas[endpoint.id].config"
           [formControlName]="endpoint.id + '-configuration'"
         ></gio-form-json-schema>
-        <gio-banner-info *ngIf="!!endpointSchemas[endpoint.id].sharedConfiguration"
+        <gio-banner-info *ngIf="!!endpointSchemas[endpoint.id].sharedConfig"
           >The following configuration will be shareable for all the endpoints of the group</gio-banner-info
         >
         <gio-form-json-schema
-          [jsonSchema]="endpointSchemas[endpoint.id].sharedConfiguration"
+          [jsonSchema]="endpointSchemas[endpoint.id].sharedConfig"
           [formControlName]="endpoint.id + '-sharedConfiguration'"
         ></gio-form-json-schema>
       </div>
