--- a/gravitee-apim-console-webui/src/management/api/component/plan/3-restriction-step/plan-edit-restriction-step.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/component/plan/3-restriction-step/plan-edit-restriction-step.component.scss
@@ -16,7 +16,6 @@
   flex-direction: column;
 
   &__schema-form {
-    border-top: 1px solid mat.get-color-from-palette(gio.$mat-space-palette, lighter80);
-    padding: 0 8px;
+    padding: 8px 0 8px 8px;
   }
 }
