fix(console): invalidate the form if the path is already used
problem of execution order of js tasks 🤷‍♂️
allows the validate function to return its result after the field control is in error

--- a/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
@@ -48,6 +48,7 @@
       </td>
       <td class="gio-form-listeners__table__row__td">
         <button
+          type="button"
           mat-icon-button
           aria-label="Delete"
           [disabled]="listenerFormArray.controls.length - 1 === controlIndex"
