refactor(console): replace automatic new line with a Add button

--- a/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
@@ -15,6 +15,14 @@
     limitations under the License.
 
 -->
+<div class="gio-form-listeners__header">
+  <span class="mat-body-strong">Entrypoints context</span>
+
+  <button class="gio-form-listeners__header__add-button" type="button" mat-stroked-button (click)="addEmptyListener()">
+    Add context-path
+  </button>
+</div>
+
 <table class="gio-table-light gio-form-listeners__table" [formGroup]="mainForm">
   <thead>
     <tr>
@@ -51,8 +59,7 @@
           type="button"
           mat-icon-button
           aria-label="Delete"
-          [disabled]="listenerFormArray.controls.length - 1 === controlIndex"
-          [ngClass]="{ 'gio-form-listeners__table__row__td__button__hide': listenerFormArray.controls.length - 1 === controlIndex }"
+          [class.gio-form-listeners__table__row__td__button__hide]="listenerFormArray.controls.length <= 1"
           (click)="onDelete(controlIndex)"
         >
           <mat-icon svgIcon="gio:cancel"></mat-icon>
