refactor(console): reverses the Add.. and Enable VH button
And improve style

--- a/gravitee-apim-console-webui/src/management/api/component/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
+++ b/gravitee-apim-console-webui/src/management/api/component/gio-form-listeners/gio-form-listeners-context-path/gio-form-listeners-context-path.component.html
@@ -15,13 +15,6 @@
     limitations under the License.
 
 -->
-<div class="gio-form-listeners__header">
-  <span class="mat-body-strong">Entrypoints context</span>
-
-  <button class="gio-form-listeners__header__add-button" type="button" mat-stroked-button (click)="addEmptyListener()">
-    Add context-path
-  </button>
-</div>
 
 <table class="gio-table-light gio-form-listeners__table" [formGroup]="mainForm">
   <thead>
@@ -68,3 +61,5 @@
     </tr>
   </tbody>
 </table>
+
+<button class="gio-form-listeners__add-button" type="button" mat-stroked-button (click)="addEmptyListener()">Add context-path</button>
