--- a/gravitee-apim-console-webui/src/management/api/component/gio-form-listeners/gio-form-listeners-virtual-host/gio-form-listeners-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/component/gio-form-listeners/gio-form-listeners-virtual-host/gio-form-listeners-virtual-host.component.html
@@ -15,14 +15,6 @@
     limitations under the License.
 
 -->
-<div class="gio-form-listeners__header">
-  <span class="mat-body-strong">Entrypoints context</span>
-
-  <button class="gio-form-listeners__header__add-button" type="button" mat-stroked-button (click)="addEmptyListener()">
-    Add context-path
-  </button>
-</div>
-
 <table class="gio-table-light gio-form-listeners__table" [formGroup]="mainForm">
   <thead>
     <tr>
@@ -106,3 +98,5 @@
     </tr>
   </tbody>
 </table>
+
+<button class="gio-form-listeners__add-button" type="button" mat-stroked-button (click)="addEmptyListener()">Add context-path</button>
