--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.scss
@@ -2,7 +2,10 @@
 @use '@gravitee/ui-particles-angular' as gio;
 
 .step-2-entrypoints-2-config {
-  &__actions {
-    padding: 16px 0;
+  &__listeners-context__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 8px;
   }
 }
