--- a/gravitee-apim-console-webui/src/components/notifications/notificationsettings/notificationsettings.html
+++ b/gravitee-apim-console-webui/src/components/notifications/notificationsettings/notificationsettings.html
@@ -15,7 +15,14 @@
     limitations under the License.
 
 -->
-<div class="gv-forms gv-forms-fluid" layout="column">
+<div
+  class="gv-forms gv-forms-fluid"
+  layout="column"
+  permission
+  permission-only="['api-notification-u', 'application-notification-u', 'environment-notification-u']"
+  permission-on-authorized="$ctrl.onAuthorized"
+  permission-on-unauthorized="$ctrl.onUnauthorized"
+>
   <div class="gv-forms" layout="column">
     <form name="$ctrl.formNotification" novalidate>
       <h1>{{$ctrl.selectedNotificationSetting.name}}</h1>
@@ -32,10 +39,17 @@
               <md-input-container flex>
                 <label ng-if="$ctrl.selectedNotifier.type === 'EMAIL'">Email list (use space, ',' or ';' to separate emails)</label>
                 <label ng-if="$ctrl.selectedNotifier.type === 'WEBHOOK'">URL (Gravitee will POST datas to this url)</label>
-                <input ng-model="$ctrl.selectedNotificationSetting.config" aria-label="Notifier configuration" />
+                <input
+                  ng-model="$ctrl.selectedNotificationSetting.config"
+                  aria-label="Notifier configuration"
+                  ng-disabled="$ctrl.readonly"
+                />
               </md-input-container>
               <md-input-container flex ng-if="$ctrl.selectedNotifier.type === 'WEBHOOK'">
-                <md-checkbox ng-model="$ctrl.selectedNotificationSetting.useSystemProxy" aria-label="Use system proxy"
+                <md-checkbox
+                  ng-model="$ctrl.selectedNotificationSetting.useSystemProxy"
+                  aria-label="Use system proxy"
+                  ng-disabled="$ctrl.readonly"
                   >Use system proxy</md-checkbox
                 >
               </md-input-container>
@@ -47,7 +61,7 @@
               <h6>{{category}}</h6>
               <div layout="row" layout-wrap>
                 <div flex="35" ng-repeat="hook in $ctrl.hooksByCategory[category]">
-                  <md-checkbox ng-model="$ctrl.hookStatus[hook.id]" aria-label="Notification Hook">
+                  <md-checkbox ng-model="$ctrl.hookStatus[hook.id]" aria-label="Notification Hook" ng-disabled="$ctrl.readonly">
                     <b>{{hook.label}}</b>
                     <br />
                     {{hook.description}}
